<resources>
    <string name="app_name">Bibliophile</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_home">Home</string>

    <string name="fragment_bookshelf">Bookshelf</string>
    <string name="fragment_post">Post</string>
    <string name="fragment_profile">Profile</string>
    <string name="fragment_transaction">Transaction</string>
    <string name="fragment_about">About</string>

    <string name="fragment_logout">Log out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">193595797722570</string>
    <string name="facebook_login_text">Log in with Facebook</string>

    <string name="book_condition_label">Condition</string>
    <string name="book_condition_prompt">Pick a condition</string>
    <string name="book_price_label">Price</string>
    <string name="book_price_placeholder">$9.99</string>
    <string name="book_post_label">Save</string>
    <string name="book_cancel_label">Cancel</string>
    <string name="book_add_price_prompt">Please enter a googleBookModel price!</string>


    <string name="addressOptional">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">ZipCode</string>
    <string name="save">SAVE</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_ISBN">ISBN number</string>
    <string name="button_search_ISBN">Search by ISBN</string>
    <string name="button_scan_barcode">Scan barcode</string>
    <string name="ISBN_validation_none">Please enter or scan an ISBN number</string>
    <string name="ISBN_validation_long">Please remove all non-numbers from the ISBN</string>
    <string name="API_response_validation_empty">No books in Google Books with this ISBN number</string>
    <string name="search_instructions">You can add a googleBookModel using the ISBN number. You can either manually type in the ISBN number or scan the barcode of your googleBookModel.</string>
    <string name="scan_barcode_success">Successfully retrieved ISBN from barcode!</string>
    <string name="scan_barcode_failure">No barcode scanned</string>
    <string name="scan_barcode_error">Error scanning barcode</string>

    <!-- Camera-related strings -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="emailAddress">Email Address</string>
    <string name="by">by</string>
    <string name="authorname">AuthorName</string>
    <string name="map_view_close">Close</string>
    <string name="price">Price: $</string>
    <string name="new_price">New Price</string>
    <string name="condition">Condition:</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="decline_transaction">Decline Transaction</string>
    <string name="isbn">ISBN:</string>
    <string name="seller_name">Email Seller</string>
    <string name="isbn_hint">Enter the Book ISBN.</string>
    <string name="app_intro">Bibiliophile is a mobile first peer to peer books marketplace</string>
    <string name="swipe_helper">You can swipe left on all books to reveal more options</string>
    <string name="app_welcome">Welcome to Bibliophile</string>
    <string name="version_tag">Version:</string>
    <string name="privacy_tag">Privacy:</string>
    <string name="about_tag">About:</string>
    <string name="about">Bibliophile is a mobile-first peer to peer app, where we provide a fully functional marketplace heavily optimized for buying and selling books.</string>
    <string name="privacy_notice">We care about privacy and believe it should not be pages and pages long.\nHere are the things we have access to:\n\t1. Your facebook email address.\n\t2. Facebook Auth details.\n\t3. Your home address.\n\nWe won\'t sell your emails or post to facebook or serve ads.</string>
    <string name="version">Bibliophile 1.0</string>

    <string-array name="condition_array">
        <item>New</item>
        <item>Used - Like New</item>
        <item>Used - Very Good</item>
        <item>Used - Good</item>
        <item>Used - Acceptable</item>
        <item>Unacceptable</item>
    </string-array>
</resources>
