<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tvSearchInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:textColor="@android:color/black"
        android:text="@string/search_instructions"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnSearchISBN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:onClick="findBookByISBN"
        android:text="@string/button_search_ISBN"
        android:backgroundTint="@color/colorAccent"/>

    <EditText
        android:id="@+id/etISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:hint="@string/hint_ISBN" />

    <Button
        android:id="@+id/btnSearchBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/button_scan_barcode" />
</FrameLayout>
