<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"

            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/edit_book_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


            <ImageView
                android:id="@+id/ivHeader"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/edit_book_toolbar"
                android:adjustViewBounds="true"
                android:alpha="0.8"
                android:scaleType="fitXY"
                android:src="@drawable/header_image_book_edit" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_book_toolbar"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:background="@drawable/back"
                android:text="Book Title"
                android:textColor="@color/colorCardView"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ivHeader"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Book Author"
                android:textSize="14sp" />

            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_author"
                android:layout_marginStart="8dp"
                android:numStars="5"
                android:rating="2.0"
                android:stepSize="1.0" />

            <TextView
                android:id="@+id/ratings_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_author"
                android:layout_marginStart="4dp"
                android:layout_toRightOf="@+id/rating"
                android:text="(25)"
                android:textColor="@color/colorTextLight" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="Description"
                android:textColor="@color/colorTextLight" />

            <LinearLayout
                android:id="@+id/price_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/colorTextLight"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_book_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_price"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorTextLight"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/conditions_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_container"
                android:layout_marginStart="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/condition"
                    android:textColor="@color/colorTextLight"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/condition_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:id="@+id/book_image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_below="@+id/book_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="58dp"
                android:adjustViewBounds="true"
                app:layout_anchor="@+id/ivHeader"
                app:layout_anchorGravity="bottom|center" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>